[package]
name = "ctclient"
description = "Certificate Transparency Log client suitable for monitoring, quick SCT validation, gossiping, etc."
license = "MIT"
repository = "https://github.com/micromaomao/ctclient"
version = "0.4.5"
authors = ["Mao Wtm <m@maowtm.org>"]
edition = "2021"
documentation = "https://docs.rs/ctclient"
readme = "README.md"

[[example]]
name = "simple_client"
path = "examples/simple_client/simple_client.rs"

[dependencies]
reqwest = { version = "0.11.23", default-features = false, features = [
    "blocking",
    "native-tls",
    "gzip",
    "json",
] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
serde_urlencoded = "0.7.1"
base64 = "0.21.7"
openssl = "0.10.62"
foreign-types = "0.3"
log = "0.4.20"
lazy_static = "1.4.0"
openssl-sys = "0.9.98"
chrono = { version = "0.4.31", features = ["serde"] }

[dev-dependencies]
# for the example binary
env_logger = "0.10.1"
rusqlite = "0.30.0"
